--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Långasands fastighetsägareförening
-email: theresetroedsson@hotmail.com
+title: Långasands Fastighetsägareförening
+email: ordforande@langasand.se
 description: >- # this means to ignore newlines until "baseurl:"
   Denna sida drivs av den ideella föreningen Långasands Fastighetsägareförening.
 baseurl: "" # the subpath of your site, e.g. /blog
